<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCedula"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cedula"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/cedula"
            android:inputType="number"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNombreUsuario"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            ></TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombreUsuario"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/nombreUsuario"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelContrasena"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/contrasena"
            ></EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelTelefono"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:id="@+id/telefono"
            android:inputType="number"
            ></EditText>

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/labelGuardar"
        android:backgroundTint="@color/black"
        android:id="@+id/guardar"
        ></Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/labelConsultar"
        android:backgroundTint="@color/black"
        android:id="@+id/consultar"
        ></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/labelLimpiar"
        android:backgroundTint="@color/black"
        android:id="@+id/limpiar"
        ></Button>

</LinearLayout>